[gd_scene load_steps=3 format=3 uid="uid://e3y1lsymtrw8"]

[ext_resource type="Texture2D" uid="uid://dwqjioa3rt4p0" path="res://assets/tools/garlic/garlic.png" id="1_t0jmp"]
[ext_resource type="Script" path="res://assets/tools/garlic/garlic.gd" id="2_shhgp"]

[node name="Garlic" type="TextureButton"]
z_index = 10
offset_right = 84.0
offset_bottom = 60.0
texture_normal = ExtResource("1_t0jmp")
script = ExtResource("2_shhgp")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -66.0
offset_top = 48.0
offset_right = 23.0
offset_bottom = 106.0
text = "garlic
uses: 3"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
